[tool.poetry]
name = "pycon-regbot"
version = "0.1.0"
description = "This bot is developed for registration users on Discord Server during PyCon TW conference."
authors = ["Jordan Su <newjordansu1126@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^2.1.3"
python-dotenv = "==0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
